# rust-opengl-test

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
data/glsl/: simple.frag  simple.vert  texture.frag  texture.vert  window.vert
src/: main.rs  menu.rs  modelview.rs  paths.rs  rectangle.rs  rust-opengl-test.rs  shader.rs  shader_program.rs  shader_programs.rs  texture.rs  window.rs
src/clew/: main.rs  paths.rs  shader.rs  shader_program.rs  texture.rs
src/engine/: game_object.rs
src/font/: character.rs  face.rs  mod.rs  text.rs
