[package]
name = "rust-opengl-test"
version = "0.1.0"
authors = [ "jhasse@gmail.com" ]

[[bin]]
name = "rust-opengl-test"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.freetype]
git = "https://github.com/servo/rust-freetype"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
