[package]
name = "rust-opengl-test"
version = "0.1.0"
authors = [ "jhasse@gmail.com" ]

[[bin]]
name = "rust-opengl-test"

[dependencies]
log = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs"

[dependencies.nalgebra]
git = "https://github.com/sebcrozet/nalgebra"
