[package]
name = "rust-opengl-test"
version = "0.1.0"
authors = [ "jhasse@gmail.com" ]

[[bin]]
name = "rust-opengl-test"

[dependencies]
log = "*"
time = "*"
libc = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs"

[dependencies.nalgebra]
git = "https://github.com/sebcrozet/nalgebra"
